css modified for alignment and javascrtip modified for correct on select handling

--- a/geoforms/static/css/questionnaire.css
+++ b/geoforms/static/css/questionnaire.css
@@ -7,6 +7,9 @@
 #content .form_element {
     text-align: center;
 }
+#content .form_element p {
+    text-align: left;
+}
 #content button.drawbutton {
     width: 150px;
 }
